CMAKE_MINIMUM_REQUIRED (VERSION 3.0)
PROJECT (item)

FIND_PACKAGE(Boost)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
MESSAGE("boost include ${Boost_INCLUDE_DIRS}")

IF (CMAKE_VERSION VERSION_LESS "3.1")
  SET(CMAKE_CXX_FLAGS "-std=gnu++11 ${CMAKE_CXX_FLAGS}")
ELSE ()
  SET(CMAKE_CXX_STANDARD 11)
ENDIF ()

SET(CMAKE_CXX_FLAGS "-g -Wall -Wextra ${CMAKE_CXX_FLAGS}")
INCLUDE_DIRECTORIES(../common/)

ADD_EXECUTABLE(item item.cpp)
